@@ -1,3 +1,5 @@
+- Make sure news and update file list aren't cached (from Aethyra)
+
 0.0.25 (27 July 2008)
 - Added support for whispering to other players
 - Added ability to ignore other players
